# NanoRange

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE-MIT.txt  README.md  TODO.md  algorithms.md  appveyor.yml  buildfile  conanfile.py  manifest
.conan/: build.py  conanfile.py
.conan/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
.github/workflows/: nanorange-ci.yml
benchmarks/: CMakeLists.txt  compile_benchmark.sh
benchmarks/algorithm/: rotate.cpp
cmake/: nanorangeConfig.cmake.in
include/: buildfile  concepts.hpp  nanorange.hpp  nanorange_extras.hpp
include/nanorange/: algorithm.hpp  concepts.hpp  functional.hpp  iterator.hpp  memory.hpp  random.hpp  range.hpp  ranges.hpp  span.hpp  type_traits.hpp  utility.hpp  view.hpp  views.hpp
include/nanorange/algorithm/: adjacent_find.hpp  all_of.hpp  any_of.hpp  binary_search.hpp  clamp.hpp  copy.hpp  count.hpp  equal.hpp  equal_range.hpp  fill.hpp  fill_n.hpp  find.hpp  find_end.hpp  find_first_of.hpp  for_each.hpp  for_each_n.hpp  generate.hpp  generate_n.hpp  includes.hpp  inplace_merge.hpp  is_heap.hpp  is_heap_until.hpp  is_partitioned.hpp  is_permutation.hpp  is_sorted.hpp  is_sorted_until.hpp  lexicographical_compare.hpp  lower_bound.hpp  make_heap.hpp  max.hpp  max_element.hpp  merge.hpp  min.hpp  min_element.hpp  minmax.hpp  minmax_element.hpp  mismatch.hpp  move.hpp  next_permutation.hpp  none_of.hpp  (+38 more)
include/nanorange/algorithm/stl/: binary_search.hpp  equal_range.hpp  includes.hpp  inplace_merge.hpp  is_heap.hpp  is_heap_until.hpp  is_partitioned.hpp  is_permutation.hpp  is_sorted.hpp  is_sorted_until.hpp  lower_bound.hpp  make_heap.hpp  max.hpp  max_element.hpp  merge.hpp  min.hpp  min_element.hpp  minmax.hpp  minmax_element.hpp  next_permutation.hpp  nth_element.hpp  partial_sort.hpp  partial_sort_copy.hpp  partition.hpp  partition_copy.hpp  partition_point.hpp  pop_heap.hpp  prev_permutation.hpp  push_heap.hpp  set_difference.hpp  set_intersection.hpp  set_symmetric_difference.hpp  set_union.hpp  sort.hpp  sort_heap.hpp  (+4 more)
include/nanorange/detail/: common_reference.hpp  common_type.hpp  macros.hpp  swap.hpp  type_traits.hpp  variant.hpp
include/nanorange/iterator/: back_insert_iterator.hpp  common_iterator.hpp  concepts.hpp  counted_iterator.hpp  default_sentinel.hpp  front_insert_iterator.hpp  insert_iterator.hpp  istream_iterator.hpp  istreambuf_iterator.hpp  move_iterator.hpp  operations.hpp  ostream_iterator.hpp  ostreambuf_iterator.hpp  reverse_iterator.hpp  unreachable.hpp
include/nanorange/memory/: destroy.hpp  uninitialized_copy.hpp  uninitialized_default_construct.hpp  uninitialized_fill.hpp  uninitialized_move.hpp  uninitialized_value_construct.hpp
include/nanorange/ranges/: istream_range.hpp
include/nanorange/view/: all.hpp  common.hpp  counted.hpp  empty.hpp  filter.hpp  interface.hpp  iota.hpp  istream.hpp  ref.hpp  reverse.hpp  single.hpp  subrange.hpp
include/nanorange/views/: all.hpp  common.hpp  counted.hpp  drop.hpp  drop_while.hpp  elements.hpp  empty.hpp  filter.hpp  interface.hpp  iota.hpp  istream.hpp  join.hpp  ref.hpp  reverse.hpp  single.hpp  split.hpp  subrange.hpp  take.hpp  take_while.hpp  transform.hpp
single_include/: nanorange.hpp
test/: CMakeLists.txt  buildfile  check_equal.hpp  print_type.hpp  range_access.cpp  test_concepts.cpp  test_iterators.hpp  test_modifying_seq_ops.cpp  test_non_modifying_seq_ops.cpp  test_partitioning_ops.cpp  test_sorting_ops.cpp  test_type_traits.cpp  test_utils.hpp
test/algorithm/: adjacent_find.cpp  all_of.cpp  any_of.cpp  binary_search.cpp  clamp.cpp  copy.cpp  copy_backward.cpp  copy_if.cpp  copy_n.cpp  count.cpp  count_if.cpp  equal.cpp  equal_range.cpp  fill.cpp  fill_n.cpp  find.cpp  find_end.cpp  find_first_of.cpp  find_if.cpp  find_if_not.cpp  for_each.cpp  for_each_n.cpp  generate.cpp  generate_n.cpp  includes.cpp  inplace_merge.cpp  is_heap.hpp  is_heap1.cpp  is_heap2.cpp  is_heap3.cpp  is_heap4.cpp  is_heap_until.hpp  is_heap_until1.cpp  is_heap_until2.cpp  is_heap_until3.cpp  is_heap_until4.cpp  is_partitioned.cpp  is_permutation.cpp  is_sorted.cpp  is_sorted_until.cpp  (+77 more)
test/basic_algorithm/: binary_search_ops.cpp  heap_ops.cpp  modifying_seq_ops.cpp  non_modifying_seq_ops.cpp  partitioning_ops.cpp  permutation_ops.cpp  set_ops.cpp  sorting_ops.cpp
test/concepts/: compare.cpp  core.cpp  fundamental.cpp  iterator.cpp  object.cpp  range.cpp  ranges.cpp  swap.cpp  validate.hpp
test/constexpr_algorithm/: constexpr_array.hpp  modifying_seq_ops.cpp  non_modifying_seq_ops.cpp  permutation_ops.cpp  sorting_ops.cpp
test/functional/: invoke.cpp
test/iterator/: common_iterator.cpp  counted_iterator.cpp  incomplete.cpp  istream_iterator.cpp  istreambuf_iterator.cpp  iterator.cpp  move_iterator.cpp  operations.cpp  ostream_iterator.cpp  ostreambuf_iterator.cpp  reverse_iterator.cpp  unreachable.cpp
test/memory/: common.hpp  destroy.cpp  uninitialized_copy.cpp  uninitialized_default_construct.cpp  uninitialized_fill.cpp  uninitialized_move.cpp  uninitialized_value_construct.cpp
test/ranges/: istream_range.cpp
test/stl/: modifying_seq_ops.cpp  non_modifying_seq_ops.cpp  permutation_ops.cpp
test/utility/: common_iterator.cpp  common_type.cpp  concepts.cpp
test/view/: bounded_view.cpp  common_view.cpp  counted_view.cpp  drop_view.cpp  drop_while_view.cpp  empty_view.cpp  filter_view.cpp  indirect_view.cpp  iota.cpp  istream_view.cpp  join_view.cpp  ref_view.cpp  repeat_n_view.cpp  repeat_view.cpp  reverse_view.cpp  single_view.cpp  span.cpp  split_view.cpp  subrange.cpp  take_view.cpp  take_while_view.cpp  transform_view.cpp
test/views/: common_view.cpp  counted_view.cpp  drop_view.cpp  drop_while_view.cpp  elements_view.cpp  empty_view.cpp  filter_view.cpp  indirect_view.cpp  iota.cpp  istream_view.cpp  join_view.cpp  move_view.cpp  ref_view.cpp  repeat_view.cpp  reverse_view.cpp  single_view.cpp  span.cpp  split_view.cpp  subrange.cpp  take_exactly_view.cpp  take_view.cpp  take_while_view.cpp  transform_view.cpp
tools/: CMakeLists.txt  buildfile  make_single_header.cpp
(+44 files in other folders)
